--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,7 +122,7 @@ services:
     container_name: hampstead-quote-builder
     restart: unless-stopped
     ports:
-      - "8000:8000"
+      - "8001:8001"
     environment:
       # AI
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
@@ -172,7 +172,7 @@ services:
       redis:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -180,7 +180,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.quote-builder.rule=Host(`api.${N8N_HOST}`) && PathPrefix(`/quotes`)"
-      - "traefik.http.services.quote-builder.loadbalancer.server.port=8000"
+      - "traefik.http.services.quote-builder.loadbalancer.server.port=8001"
 
   # ─────────────────────────────────────────────────────────────────────────────
   # CONTRACT GENERATOR - FASTAPI MICROSERVICE
@@ -192,7 +192,7 @@ services:
     container_name: hampstead-contract-generator
     restart: unless-stopped
     ports:
-      - "8001:8001"
+      - "8002:8002"
     environment:
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - HUBSPOT_API_KEY=${HUBSPOT_API_KEY}
@@ -202,6 +202,12 @@ services:
       - AWS_REGION=${AWS_REGION:-eu-west-2}
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       - COMPANY_NAME=${COMPANY_NAME:-Hampstead Renovations Ltd}
+      - COMPANY_ADDRESS=${COMPANY_ADDRESS}
+      - COMPANY_PHONE=${COMPANY_PHONE:-020 7946 0958}
+      - COMPANY_EMAIL=${COMPANY_EMAIL:-info@hampsteadrenovations.co.uk}
+      - COMPANY_WEBSITE=${COMPANY_WEBSITE:-www.hampsteadrenovations.co.uk}
+      - COMPANY_NUMBER=${COMPANY_NUMBER}
+      - COMPANY_VAT_NUMBER=${COMPANY_VAT_NUMBER}
       - ENVIRONMENT=${ENVIRONMENT:-production}
     networks:
       - hampstead-network
@@ -209,7 +215,7 @@ services:
       - postgres
       - redis
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8002/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -224,7 +230,7 @@ services:
     container_name: hampstead-invoice-generator
     restart: unless-stopped
     ports:
-      - "8002:8002"
+      - "8003:8003"
     environment:
       - HUBSPOT_API_KEY=${HUBSPOT_API_KEY}
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
@@ -234,6 +240,16 @@ services:
       - AWS_REGION=${AWS_REGION:-eu-west-2}
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       - COMPANY_NAME=${COMPANY_NAME:-Hampstead Renovations Ltd}
+      - COMPANY_ADDRESS=${COMPANY_ADDRESS}
+      - COMPANY_PHONE=${COMPANY_PHONE:-020 7946 0958}
+      - COMPANY_EMAIL=${COMPANY_EMAIL:-accounts@hampsteadrenovations.co.uk}
+      - COMPANY_WEBSITE=${COMPANY_WEBSITE:-www.hampsteadrenovations.co.uk}
+      - COMPANY_NUMBER=${COMPANY_NUMBER}
+      - COMPANY_VAT_NUMBER=${COMPANY_VAT_NUMBER}
+      - BANK_NAME=${BANK_NAME}
+      - BANK_SORT_CODE=${BANK_SORT_CODE}
+      - BANK_ACCOUNT_NUMBER=${BANK_ACCOUNT_NUMBER}
+      - BANK_ACCOUNT_NAME=${BANK_ACCOUNT_NAME}
       - ENVIRONMENT=${ENVIRONMENT:-production}
     networks:
       - hampstead-network
@@ -241,7 +257,7 @@ services:
       - postgres
       - redis
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8002/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8003/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -393,7 +409,8 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./infrastructure/monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./infrastructure/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./infrastructure/prometheus/alerts:/etc/prometheus/alerts:ro
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
@@ -423,8 +440,8 @@ services:
       - GF_SERVER_ROOT_URL=https://grafana.${N8N_HOST}
     volumes:
       - grafana_data:/var/lib/grafana
-      - ./infrastructure/monitoring/grafana/provisioning:/etc/grafana/provisioning:ro
-      - ./infrastructure/monitoring/grafana/dashboards:/var/lib/grafana/dashboards:ro
+      - ./infrastructure/grafana/provisioning:/etc/grafana/provisioning:ro
+      - ./infrastructure/grafana/dashboards:/var/lib/grafana/dashboards:ro
     networks:
       - hampstead-network
     depends_on:
