--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,6 @@ playwright/.cache/
 # ─────────────────────────────────────────────────────────────────────────────────
 prometheus-data/
 grafana-data/
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
